# bazel-demo

./: BUILD.bazel  WORKSPACE  package.json
tools/: BUILD.bazel  defaults.bzl  tsconfig-test.json  tsconfig.json
