package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_config")

exports_files([
    "tsconfig-test.json",
    "tsconfig.json",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [],
)

ts_config(
    name = "tsconfig-test",
    src = "tsconfig-test.json",
    deps = [":tsconfig-build.json"],
)